--- a/Shark Cage/Cage service/Cage service.vcxproj
+++ b/Shark Cage/Cage service/Cage service.vcxproj
@@ -149,6 +149,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="StatusManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
