--- a/Shark Cage/Cage service/Cage service.vcxproj
+++ b/Shark Cage/Cage service/Cage service.vcxproj
@@ -149,12 +149,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CageService.h" />
     <ClInclude Include="StatusManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cage service.cpp" />
+    <ClCompile Include="CageService.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
