--- a/Shark Cage/Cage service/Cage service.vcxproj.filters
+++ b/Shark Cage/Cage service/Cage service.vcxproj.filters
@@ -35,10 +35,10 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Cage service.cpp">
+    <ClCompile Include="CageService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CageService.cpp">
+    <ClCompile Include="CageServiceMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
