First two Message Types for the Cage Service

--- a/Shark Cage/Cage service/Cage service.vcxproj
+++ b/Shark Cage/Cage service/Cage service.vcxproj
@@ -153,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CageService.h" />
+    <ClInclude Include="MSG_Service.h" />
     <ClInclude Include="NetworkManager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="StatusManager.h" />
