--- a/Shark Cage/Cage service/Cage service.vcxproj.filters
+++ b/Shark Cage/Cage service/Cage service.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="NetworkManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MSG_Service.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
