--- a/Shark Cage/StarterCMD/StarterCMD.vcxproj.filters
+++ b/Shark Cage/StarterCMD/StarterCMD.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClInclude Include="..\Cage service\MSG_Service.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MainWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StarterCMD.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MainWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
