Create Group SID

--- a/Shark Cage/Cage service/Cage service.vcxproj
+++ b/Shark Cage/Cage service/Cage service.vcxproj
@@ -93,6 +93,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)%;.\HTWG_shark_cage\Shark Cage\asio-1.10.8\include</AdditionalIncludeDirectories>
