--- a/Shark Cage/StarterCMD/StarterCMD.vcxproj
+++ b/Shark Cage/StarterCMD/StarterCMD.vcxproj
@@ -147,10 +147,12 @@
   <ItemGroup>
     <ClInclude Include="..\Cage service\CageService.h" />
     <ClInclude Include="..\Cage service\MSG_Service.h" />
+    <ClInclude Include="IconSelectDialog.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="IconSelectDialog.cpp" />
     <ClCompile Include="StarterCMD.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
