--- a/Shark Cage/ImageSelectDialog/ImageSelectDialog.csproj
+++ b/Shark Cage/ImageSelectDialog/ImageSelectDialog.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{5DCC9AE6-CB50-4B4A-B3D8-78C6D2466362}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsApplication1</RootNamespace>
-    <AssemblyName>WindowsFormsApplication1</AssemblyName>
+    <RootNamespace>ImageSelectDialog</RootNamespace>
+    <AssemblyName>ImageSelectDialog</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
