--- a/Shark Cage/CageManager/CageManager.vcxproj
+++ b/Shark Cage/CageManager/CageManager.vcxproj
@@ -150,6 +150,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CageDesktop.h" />
+    <ClInclude Include="CageLabeler.h" />
+    <ClInclude Include="FullWorkArea.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
