--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,9 @@ version: 1.0.{build}
 
 image: Visual Studio 2017
 
+before_build:
+  - nuget restore
+
 build:
 
   project: SharkCage/SharkCage.sln
