--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ version: 1.0.{build}
 image: Visual Studio 2017
 
 before_build:
-  - nuget restore
+  - nuget restore SharkCage/SharkCage.sln 
 
 build:
 
