--- a/SharkCage/CageConfigurator/packages.config
+++ b/SharkCage/CageConfigurator/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DirectShowLib" version="1.0.0" targetFramework="net461" />
+  <package id="AForge" version="2.2.5" targetFramework="net461" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net461" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
 </packages>
