--- a/SharkCage/CageService/CageService.vcxproj.filters
+++ b/SharkCage/CageService/CageService.vcxproj.filters
@@ -49,5 +49,8 @@
     <ClCompile Include="CageServiceMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
