preliminary work to detect on which desktop the configurator was started

--- a/SharkCage/CageNetwork/CageNetwork.vcxproj
+++ b/SharkCage/CageNetwork/CageNetwork.vcxproj
@@ -101,6 +101,7 @@
     <PostBuildEvent>
       <Command>xcopy /y "$(OutDir)$(TargetName).lib" "$(ProjectDir)"
 xcopy /y "$(OutDir)$(TargetName).dll" "$(SolutionDir)CageChooser\bin\$(Configuration)\"
+xcopy /y "$(OutDir)$(TargetName).dll" "$(SolutionDir)CageConfigurator\bin\$(Configuration)\"
 xcopy /y "$(OutDir)$(TargetName).dll" "$(SolutionDir)post_build_output\"
 xcopy /y "$(OutDir)$(TargetName).pdb" "$(SolutionDir)post_build_output\"</Command>
     </PostBuildEvent>
