--- a/SharkCage/CageService/CageService.vcxproj
+++ b/SharkCage/CageService/CageService.vcxproj
@@ -99,6 +99,7 @@
       <TreatWarningAsError>true</TreatWarningAsError>
       <DisableSpecificWarnings>
       </DisableSpecificWarnings>
+	  <AdditionalOptions>/std:c++latest %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -128,6 +129,7 @@ xcopy /y "$(OutDir)$(TargetName).pdb" "$(SolutionDir)post_build_output\"
       <SDLCheck>true</SDLCheck>
       <DisableSpecificWarnings>4834</DisableSpecificWarnings>
       <TreatWarningAsError>true</TreatWarningAsError>
+	  <AdditionalOptions>/std:c++latest %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
