--- a/SharkCage/CageManager/CageManager.vcxproj
+++ b/SharkCage/CageManager/CageManager.vcxproj
@@ -192,16 +192,22 @@ xcopy /y "$(OutDir)$(TargetName).pdb" "$(SolutionDir)post_build_output\"</Comman
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CageDesktop.h" />
     <ClInclude Include="CageLabeler.h" />
     <ClInclude Include="CageManager.h" />
     <ClInclude Include="base64.h" />
+    <ClInclude Include="FullWorkArea.h" />
+    <ClInclude Include="SecuritySetup.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="base64.cpp" />
+    <ClCompile Include="CageDesktop.cpp" />
     <ClCompile Include="CageLabeler.cpp" />
     <ClCompile Include="CageManager.cpp" />
+    <ClCompile Include="FullWorkArea.cpp" />
+    <ClCompile Include="SecuritySetup.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
