--- a/SharkCage/CageService/CageService.vcxproj.filters
+++ b/SharkCage/CageService/CageService.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ValidateBinary.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="CageService.rc">
@@ -44,6 +47,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CageServiceMain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ValidateBinary.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
