static analysis fixes

--- a/SharkCage/CageConfigurator/App.config
+++ b/SharkCage/CageConfigurator/App.config
@@ -10,7 +10,7 @@
     </startup>
     <userSettings>
         <CageConfigurator.Properties.Settings>
-            <setting name="PeristentKeepassPath" serializeAs="String">
+            <setting name="PersistentKeepassPath" serializeAs="String">
                 <value />
             </setting>
         </CageConfigurator.Properties.Settings>
