--- a/SharkCage/CageConfigurator/Properties/Settings.settings
+++ b/SharkCage/CageConfigurator/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CageConfigurator.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="PeristentKeepassPath" Type="System.String" Scope="User">
+    <Setting Name="PersistentKeepassPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
