--- a/SharkCage/CageManager/CageManager.vcxproj.filters
+++ b/SharkCage/CageManager/CageManager.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="SecuritySetup.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CageManager.cpp">
@@ -64,5 +67,10 @@
     <ClCompile Include="SecuritySetup.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="CageManager.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
