--- a/SharkCage/SharedFunctionality/SharedFunctionality.vcxproj.filters
+++ b/SharkCage/SharedFunctionality/SharedFunctionality.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="ValidateBinary.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -82,5 +85,10 @@
     <None Include="cpp.hint">
       <Filter>Resource Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="SharedFunctionality.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
