--- a/SharkCage/SharedFunctionality/SharedFunctionality.vcxproj
+++ b/SharkCage/SharedFunctionality/SharedFunctionality.vcxproj
@@ -194,6 +194,7 @@ xcopy /y "$(OutDir)$(TargetName).dll" "$(SolutionDir)CageChooser\bin\$(Configura
     <ClInclude Include="CageData.h" />
     <ClInclude Include="Messages.h" />
     <ClInclude Include="NetworkManager.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SharedFunctions.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -217,6 +218,9 @@ xcopy /y "$(OutDir)$(TargetName).dll" "$(SolutionDir)CageChooser\bin\$(Configura
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="SharedFunctionality.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
